--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ two_columns_layout: true
 
 
 # Advanced Settings
-url: "https://kimmisik.github.io/cjw" 
+url: "https://choijangwook.github.io/cjw" 
 baseurl: "/cjw"  
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
