--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "blog",
     "netlify"
   ],
-  "author": "Thiago Rossener",
+  "author": "ChoiJangWook and Thiago Rossener",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/thiagorossener/jekflix-template/issues"
