--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Jekflix
 title: Jekflix | A blog theme for Jekyll
 description: Jekflix is a template for Jekyll inspired by Netflix and made by
-  Thiago Rossener.
+  ChoiJangWook and Thiago Rossener.
 tags:
   - blog
   - template
